social button mobile fix

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -38,7 +38,7 @@
         transition: transform .2s ease-out;
     }
     .social-links{
-        flex-grow: 1;
+        flex-grow: .4;
         flex-direction: row;
     }
     .sidebar{
