--- a/src/components/SocialButton/styles.css
+++ b/src/components/SocialButton/styles.css
@@ -7,7 +7,7 @@
     cursor: pointer;
 }
 .sb > i{
-    font-size: 18px;
+    font-size: 19px;
     color: var(--white);
     transition: transform .2s ease-out;
 }
